--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>⚡️ IT CORP App Generator</title>
+    <title>IT CORP App Generator</title>
   </head>
   <body className="min-h-screen grid place-items-center">
     <div id="root" className="min-h-screen grid place-items-center"></div>
